Backend Integrated for book

--- a/ui/src/app/admin/admin.component.html
+++ b/ui/src/app/admin/admin.component.html
@@ -3,6 +3,9 @@
 <div style = "margin: 20; float:right">
     <button class = "button" (click)="addAdmin()"> Add Admin</button>
 </div>
+<div>
+    <p>Hello Admin!</p>
+</div>
 
 <ul>
     <li *ngFor="let anything of number">{{anything}}</li>
