--- a/ui/src/app/add-books/add-books.component.html
+++ b/ui/src/app/add-books/add-books.component.html
@@ -1,18 +1,42 @@
 <div style="padding-left: 100px;">
   <h1> Add Books</h1>
-  <form [formGroup]="booksForm">
-    <label>Title</label>
-    <input type="text" formControlName="titles">
-
-    <label>Author</label>
-    <input type="text" formControlName="author">
-
-    <label>ISBN</label>
-    <input type="text" formControlName="isbn">
-
-    <label>No Of Copies</label>
-    <input type="number" formControlName="copies">
-
+  <form [formGroup]="booksForm" (ngSubmit)="saveBook()">
+    <div>
+      <label for="title">Title:</label>
+      <input type="text" id="title" formControlName="title" />
+    </div>
+    <div>
+      <label for="author">Author:</label>
+      <input type="text" id="author" formControlName="author" />
+    </div>
+    <div>
+      <label for="isbn">ISBN:</label>
+      <input type="text" id="isbn" formControlName="isbn" />
+    </div>
+    <div>
+      <label for="publication">Publication Date:</label>
+      <input type="text" id="publication" formControlName="publication" />
+    </div>
+    <div>
+      <label for="publisher">Publisher:</label>
+      <input type="text" id="publisher" formControlName="publisher" />
+    </div>
+    <div>
+      <label for="copies">Copies:</label>
+      <input type="number" id="copies" formControlName="copies" />
+    </div>
+    <div>
+      <label for="category">Category:</label>
+      <input type="text" id="category" formControlName="category" />
+    </div>
+    <div>
+      <label for="genre">Genre:</label>
+      <input type="text" id="genre" formControlName="genre" />
+    </div>
+    <div>
+      <label for="subgenre">Subgenre:</label>
+      <input type="text" id="subgenre" formControlName="subgenre" />
+    </div>
     <div *ngIf="booksForm.valid">
       <input type="submit" value="Save Book" style="background: #56ab2f;  /* fallback for old browsers */
       background: -webkit-linear-gradient(to right, #a8e063, #56ab2f);  /* Chrome 10-25, Safari 5.1-6 */
@@ -25,9 +49,3 @@
 
 <h3> Form status: {{booksForm.valid}}</h3>
 <h3> Form json: {{booksForm.value | json}}</h3>
-
-<form [formGroup]="booksForm">
-  <label>Title</label>
-  <input type="text" formControlName="titles">
-
-</form>
