--- a/ui/src/app/book/book.component.html
+++ b/ui/src/app/book/book.component.html
@@ -8,29 +8,33 @@
  
 <table>
     <thead>
-        <tr>
-            <th>Title</th>
-            <th>Author</th>
-            <th>ISBN</th>
-            <th>Publication Date</th>
-            <th>Publisher</th>
-            <th>Copies</th>
-            <th>Category</th>
-            <th>Genre</th>
-            <th>Subgenre</th>
-        </tr>
+      <tr>
+        <th>Title</th>
+        <th>Author</th>
+        <th>ISBN</th>
+        <th>Publication Date</th>
+        <th>Publisher</th>
+        <th>Copies</th>
+        <th>Category</th>
+        <th>Genre</th>
+        <th>Subgenre</th>
+        <th>Actions</th>
+      </tr>
     </thead>
-    <tbody *ngIf="book.length>0">
-        <tr *ngFor="let book of book">
-            <td>{{book.title}}</td>
-            <td>{{book.author}}</td>
-            <td>{{book.isbn}}</td>
-            <td>{{book.publicationDate}}</td>
-            <td>{{book.publisher}}</td>
-            <td>{{book.copies}}</td>
-            <td>{{book.category}}</td>
-            <td>{{book.genre}}</td>
-            <td>{{book.subgenre}}</td>
-        </tr>
+    <tbody>
+      <tr *ngFor="let book of book">
+        <td>{{ book.title }}</td>
+        <td>{{ book.author }}</td>
+        <td>{{ book.isbn }}</td>
+        <td>{{ book.publication }}</td>
+        <td>{{ book.publisher }}</td>
+        <td>{{ book.copies }}</td>
+        <td>{{ book.category }}</td>
+        <td>{{ book.genre }}</td>
+        <td>{{ book.subgenre }}</td>
+        <td>
+          <button (click)="deleteBook(book.id)">Delete</button>
+        </td>
+      </tr>
     </tbody>
-</table>
+  </table>
